--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
             <url>http://repo2.visualillusionsent.net/repository/public/</url>
         </repository>
     </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.pircbotx</groupId>
@@ -83,6 +84,22 @@
             <scope>runtime</scope>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>net.visualillusionsent</groupId>
+                <artifactId>viutils</artifactId>
+                <version>1.3.0-SNAPSHOT</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.pircbotx</groupId>
+                <artifactId>pircbotx</artifactId>
+                <version>${pircbotx.version}</version>
+                <scope>compile</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <finalName>${project.name}-${project.version}</finalName>
         <plugins>
@@ -243,7 +260,6 @@
             </plugin>
         </plugins>
     </build>
-
     <profiles>
         <profile>
             <id>attach-sources-javadoc</id>
@@ -279,10 +295,17 @@
                                 <link>http://site.pircbotx.googlecode.com/hg-history/${pircbotx.version}/apidocs/</link>
                             </links>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
         </profile>
     </profiles>
-
 </project>
