--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         </license>
     </licenses>
     <url>http://wiki.visualillusionsent.net/VIBotX</url>
-    <inceptionYear>2014</inceptionYear>
+    <inceptionYear>2012</inceptionYear>
     <organization>
         <name>Visual Illusions Entertainment</name>
         <url>http://visualillusionsent.net</url>
@@ -182,7 +182,7 @@
                         <java>SLASHSTAR_STYLE</java>
                     </mapping>
                     <properties>
-                        <years>${project.inceptionYear}<!-- -${current.year} unused at this time--></years>
+                        <years>${project.inceptionYear}-${current.year}</years>
                     </properties>
                     <includes>
                         <include>src/main/java/**</include>
@@ -212,7 +212,7 @@
                     <replacements>
                         <replace>
                             <token>{copyright.years}</token>
-                            <value>${project.inceptionYear}<!-- -${current.year} unused at this time--></value>
+                            <value>${project.inceptionYear}-${current.year}</value>
                         </replace>
                     </replacements>
                     <regex>false</regex>
