adding ProgramChecker and configuration getters to JavaPlugin, tweaked Command exceptions, various other tweaks

--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,8 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>jnks-${jnks.build}</shadedClassifierName>
                         </configuration>
                     </execution>
                 </executions>
