--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,13 @@
             <url>http://repo2.visualillusionsent.net/repository/public/</url>
         </repository>
     </distributionManagement>
-
+    <repositories>
+        <repository>
+            <id>vi-repo2</id>
+            <name>Visual Illusions Repository</name>
+            <url>http://repo2.visualillusionsent.net/repository/public/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.pircbotx</groupId>
@@ -90,7 +96,7 @@
             <dependency>
                 <groupId>net.visualillusionsent</groupId>
                 <artifactId>viutils</artifactId>
-                <version>1.3.0-SNAPSHOT</version>
+                <version>1.3.0</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
