--- a/pom.xml
+++ b/pom.xml
@@ -53,16 +53,16 @@
     </ciManagement>
     <distributionManagement>
         <repository>
-            <id>vi-repo2</id>
+            <id>vi-repo</id>
             <name>Visual Illusions Repository</name>
-            <url>http://repo2.visualillusionsent.net/repository/public/</url>
+            <url>http://repo.visualillusionsent.net/repository/public/</url>
         </repository>
     </distributionManagement>
     <repositories>
         <repository>
-            <id>vi-repo2</id>
+            <id>vi-repo</id>
             <name>Visual Illusions Repository</name>
-            <url>http://repo2.visualillusionsent.net/</url>
+            <url>http://repo.visualillusionsent.net/</url>
         </repository>
     </repositories>
     <dependencies>
