optimizations and simplifications

--- a/src/main/resources/resources/default.cfg
+++ b/src/main/resources/resources/default.cfg
@@ -1,6 +1,6 @@
 ;# VIBotX Configuration File
 ;The IRC Server to connect to
-server.hostname=irc.esper.net
+server.hostname=irc.testing.visualillusionsent.net
 ;The port of the server
 server.port=6667
 ;The password of the Server if applicable
